--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nigga For Sale</title>
+    <title>Scammer For Sale</title>
     <link rel="icon" href="imgs/box-solid.png" type="image/x-icon">
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -23,7 +23,7 @@
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-box nav-logo-icon"></i>
-                <p> Nigga For Sale</p>
+                <p> Scammer For Sale</p>
             </a>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-items" id="nav-items">
@@ -58,7 +58,7 @@
                     <img class="cart-img" src="imgs/h.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Jamal</h3>
+                    <h3 class="cart-title-center">Amir</h3>
                     <span class="cart-price">$5541</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -79,7 +79,7 @@
                     <img class="cart-img" src="imgs/Jacket2.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Kaiman Bryant</h3>
+                    <h3 class="cart-title-center">Rajesh</h3>
                     <span class="cart-price">$2458</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -100,7 +100,7 @@
                     <img class="cart-img" src="imgs/short.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Telvis Gregory</h3>
+                    <h3 class="cart-title-center">Rakesh</h3>
                     <span class="cart-price">$4788</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -168,14 +168,14 @@
                             <img class="home-img" src="imgs/h.png" alt="">
                             <div class="home-ind"></div>
                             <div class="home-img-details">
-                                <h4 class="home-details-title">The "Jamal"</h4>
+                                <h4 class="home-details-title">The "Amir"</h4>
                                 <span class="home-details-subtitle">Loyal</span>
                             </div>
                         </div>
                         <div class="home-data">
                             <h3 class="home-subtitle">#1 TRENDING ITEM</h3>
                             <h1 class="home-title">Dark, <br> Hard Working <br> and Loyal!!</h1>
-                            <p class="home-disc">Jamal, a loyal slave, devised a ​daring plan to flee the plantation by buying his freedom back, his spirit ​undeterred by the harsh realities of his ​enslavement.</p>
+                            <p class="home-disc">Amir, a loyal slave, devised a ​daring plan to flee the plantation by buying his freedom back, his spirit ​undeterred by the harsh realities of his ​enslavement.</p>
                             <div class="home-buttons">
                                 <a href="details.html" class="button">Buy Now!</a>
                                 <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
@@ -190,14 +190,14 @@
                             <img class="home-img" src="imgs/Jacket4.png" alt="">
                             <div class="home-ind"></div>
                             <div class="home-img-details">
-                                <h4 class="home-details-title">NegroChad</h4>
+                                <h4 class="home-details-title">Ramesh</h4>
                                 <span class="home-details-subtitle">"Strongest"</span>
                             </div>
                         </div>
                         <div class="home-data">
                             <h3 class="home-subtitle">#2 TOP BEST DUO</h3>
                             <h1 class="home-title">Masculine, <br> Breedable, <br> And Strong</h1>
-                            <p class="home-disc">Negrochad, a skilled blacksmith, forged ​tools of resistance in secret, his heart filled ​with hope for a future where he and his ​fellow slaves would be free.</p>
+                            <p class="home-disc">Ramesh, a skilled blacksmith, forged ​tools of resistance in secret, his heart filled ​with hope for a future where he and his ​fellow slaves would be free.</p>
                             <div class="home-buttons">
                                 <a href="details.html" class="button">Buy Now!</a>
                                 <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
@@ -219,7 +219,7 @@
                         <div class="home-data">
                             <h3 class="home-subtitle">#3 TRENDING ITEM</h3>
                             <h1 class="home-title">SALE <span class="main-color"> 20%</span> <br> OFF ON <br> EVRYTHING</h1>
-                            <p class="home-disc">Telvis Gregory, a determined scholar, ​secretly learned to read and write, using ​his newfound knowledge to document the ​injustices he faced and inspire others to ​fight for change.</p>
+                            <p class="home-disc">Rakesh, a determined scholar, ​secretly learned to read and write, using ​his newfound knowledge to document the ​injustices he faced and inspire others to ​fight for change.</p>
                             <div class="home-buttons">
                                 <a href="details.html" class="button ">Buy Now!</a>
                                 <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
@@ -257,7 +257,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket2.png" alt="New">
-                        <h3 class="new-title">Kaiman Bryant</h3>
+                        <h3 class="new-title">Rajesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -271,7 +271,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/short.png" alt="New">
-                        <h3 class="new-title">Telvis Gregory</h3>
+                        <h3 class="new-title">Rakesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -285,7 +285,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket3.png" alt="New">
-                        <h3 class="new-title">Hakim Brown</h3>
+                        <h3 class="new-title">Sanjay</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -299,7 +299,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/h.png" alt="New">
-                        <h3 class="new-title">Jamal</h3>
+                        <h3 class="new-title">Amir</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -313,7 +313,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket4.png" alt="New">
-                        <h3 class="new-title">NegroChad</h3>
+                        <h3 class="new-title">Ramesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -327,7 +327,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/jeans.png" alt="New">
-                        <h3 class="new-title">Jekeil Steele</h3>
+                        <h3 class="new-title">Raju</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -346,7 +346,7 @@
     <!-- ################## END NEW AV ################# -->
     <div class="steps section container">
 
-        <h2 class="section-title">How To Order Products <br>From Nigga For Sale</h2>
+        <h2 class="section-title">How To Order Products <br>From Scammer For Sale</h2>
         <div class="steps-container grid">
             <div class="steps-box">
                 <span class="number">01</span>
@@ -400,7 +400,7 @@
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
                     <i class="fas fa-box footer-logo-icon"></i>
-                    <p> Nigga For Sale</p>
+                    <p> Scammer For Sale</p>
                 </a>
 
                 <p class="footer-discription">Enjoy the biggest sale <br> of your life.</p>
