--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                     <img class="cart-img" src="imgs/h.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Jamal</h3>
+                    <h3 class="cart-title-center">Amir</h3>
                     <span class="cart-price">$5541</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -78,7 +78,7 @@
                     <img class="cart-img" src="imgs/Jacket2.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Kaiman Bryant</h3>
+                    <h3 class="cart-title-center">Rajesh</h3>
                     <span class="cart-price">$2458</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -99,7 +99,7 @@
                     <img class="cart-img" src="imgs/short.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Telvis Gregory</h3>
+                    <h3 class="cart-title-center">Rakesh</h3>
                     <span class="cart-price">$4788</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
