--- a/details2.html
+++ b/details2.html
@@ -57,7 +57,7 @@
                     <img class="cart-img" src="imgs/h.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Jamal</h3>
+                    <h3 class="cart-title-center">Amir</h3>
                     <span class="cart-price">$5541</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -78,7 +78,7 @@
                     <img class="cart-img" src="imgs/Jacket2.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Kaiman Bryant</h3>
+                    <h3 class="cart-title-center">Rajesh</h3>
                     <span class="cart-price">$2458</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -99,7 +99,7 @@
                     <img class="cart-img" src="imgs/short.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Telvis Gregory</h3>
+                    <h3 class="cart-title-center">Rakesh</h3>
                     <span class="cart-price">$4788</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -173,8 +173,8 @@
                     </div>
                 </div>
                 <div class="product-info">
-                    <p class="details-subtitle">Slaves > NegroChad</p>
-                    <h3 class="details-title">NegroChad</h3>
+                    <p class="details-subtitle">Slaves > Ramesh</p>
+                    <h3 class="details-title">Ramesh</h3>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
                     <div class="details-discription">
                         <h3 class="discription-title">Product Details</h3>
                         <div class="discription-details">
-                            <p>Negrochad, a skilled blacksmith, forged ​tools of resistance in secret, his heart filled ​with hope for a future where he and his ​fellow slaves would be free.</p>
+                            <p>Ramesh, a skilled blacksmith, forged ​tools of resistance in secret, his heart filled ​with hope for a future where he and his ​fellow slaves would be free.</p>
                         </div>
                     </div>
                     <div class="cart-amount">
@@ -220,7 +220,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket2.png" alt="New">
-                        <h3 class="new-title">Kaiman Bryant</h3>
+                        <h3 class="new-title">Rajesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -234,7 +234,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/short.png" alt="New">
-                        <h3 class="new-title">Telvis Gregory</h3>
+                        <h3 class="new-title">Rakesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -248,7 +248,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket3.png" alt="New">
-                        <h3 class="new-title">Hakim Brown</h3>
+                        <h3 class="new-title">Sanjay</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -262,7 +262,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/h.png" alt="New">
-                        <h3 class="new-title">Jamal</h3>
+                        <h3 class="new-title">Amir</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -276,7 +276,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket4.png" alt="New">
-                        <h3 class="new-title">NegroChad</h3>
+                        <h3 class="new-title">Ramesh</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
@@ -290,7 +290,7 @@
                     <div class="new-content swiper-slide">
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/jeans.png" alt="New">
-                        <h3 class="new-title">Jekeil Steele</h3>
+                        <h3 class="new-title">Raju</h3>
                         <span class="new-subtitle">Slave</span>
 
                         <div class="new-prices">
