--- a/shop.html
+++ b/shop.html
@@ -57,7 +57,7 @@
                     <img class="cart-img" src="imgs/h.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Jamal</h3>
+                    <h3 class="cart-title-center">Amir</h3>
                     <span class="cart-price">$5541</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -78,7 +78,7 @@
                     <img class="cart-img" src="imgs/Jacket2.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Kaiman Bryant</h3>
+                    <h3 class="cart-title-center">Rajesh</h3>
                     <span class="cart-price">$2458</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -99,7 +99,7 @@
                     <img class="cart-img" src="imgs/short.png" alt="">
                 </div>
                 <div class="cart-details">
-                    <h3 class="cart-title-center">Telvis Gregory</h3>
+                    <h3 class="cart-title-center">Rakesh</h3>
                     <span class="cart-price">$4788</span>
                     <div class="cart-amount">
                         <div class="cart-amount-content">
@@ -257,7 +257,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/Jacket3.png" alt="">
-                        <h3 class="shop-title">Hakim Brown</h3>
+                        <h3 class="shop-title">Sanjay</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$6294</span>
@@ -271,7 +271,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/Jacket4.png" alt="">
-                        <h3 class="shop-title">NegroChad</h3>
+                        <h3 class="shop-title">Ramesh</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$9999</span>
@@ -285,7 +285,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/Jacket2.png" alt="">
-                        <h3 class="shop-title">Kaiman Bryant</h3>
+                        <h3 class="shop-title">Rajesh</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2458</span>
@@ -299,7 +299,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/jeans.png" alt="">
-                        <h3 class="shop-title">Jekeil Steele</h3>
+                        <h3 class="shop-title">Raju</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2031</span>
@@ -313,7 +313,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/h.png" alt="">
-                        <h3 class="shop-title">Jamal</h3>
+                        <h3 class="shop-title">Amir</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$5541</span>
@@ -327,7 +327,7 @@
                     <div class="shop-content">
                         <div class="tag">New</div>
                         <img class="shop-img" src="imgs/short.png" alt="">
-                        <h3 class="shop-title">Telvis Gregory</h3>
+                        <h3 class="shop-title">Rakesh</h3>
                         <span class="shop-subtitle">Slave</span>
                         <div class="shop-prices">
                             <span class="shop-price">$4788</span>
