--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nigga For Sale</title>
+    <title>Scammer For Sale</title>
     <link rel="icon" href="imgs/box-solid.png" type="image/x-icon">
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -22,7 +22,7 @@
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-box nav-logo-icon"></i>
-                <p> Nigga For Sale</p>
+                <p> Scammer For Sale</p>
             </a>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-items" id="nav-items">
@@ -261,7 +261,7 @@
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
                     <i class="fas fa-box footer-logo-icon"></i>
-                    <p> Nigga For Sale</p>
+                    <p> Scammer For Sale</p>
                 </a>
 
                 <p class="footer-discription">Enjoy the biggest sale <br> of your life.</p>
