--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                             <img class="home-img" src="imgs/Short.png" alt="">
                             <div class="home-ind"></div>
                             <div class="home-img-details">
-                                <h4 class="home-details-title">Telvis</h4>
-                                <span class="home-details-subtitle">Gregory</span>
+                                <h4 class="home-details-title">Rakesh</h4>
+                                <span class="home-details-subtitle"></span>
                             </div>
                         </div>
                         <div class="home-data">
