--- a/blog.html
+++ b/blog.html
@@ -21,29 +21,21 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
-                <i class="fas fa-box nav-logo-icon"></i>
-                <p> Scammer For Sale</p>
+                <i class="fas fa-user-secret nav-logo-icon"></i>
+                <span>Scammer For Sale</span>
             </a>
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-items" id="nav-items">
-                    <li class="item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="item"><a class="nav-link active-link" href="blog.html">Blog</a></li>
-                    <li class="item"><a class="nav-link" href="faq.html">Faq's</a></li>
-                    <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <ul class="nav-items">
+                <li class="item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
+                <li class="item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="item"><a class="nav-link active-link" href="blog.html">Blog</a></li>
+                <li class="item"><a class="nav-link" href="faq.html">Faq's</a></li>
+                <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
             <div class="nav-btns">
-                <div class="login-toggle" id="login-toggle">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="cart-shop" id="cart-shop">
-                    <i class="fas fa-shopping-cart"></i>
-                </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <i id="icon-toggel" class="fas fa-bars"></i>
-                </div>
+                <button class="button login-toggle" id="login-toggle"><i class="fas fa-user"></i></button>
+                <button class="button cart-shop" id="cart-shop"><i class="fas fa-shopping-cart"></i></button>
+                <button class="button nav-toggle" id="nav-toggle"><i id="icon-toggel" class="fas fa-bars"></i></button>
             </div>
         </nav>
     </header>
@@ -243,7 +235,7 @@
             <!-- FOOTER CONTENT 1 -->
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <i class="fas fa-box footer-logo-icon"></i>
+                    <i class="fas fa-user-secret footer-logo-icon"></i>
                     <p> Scammer For Sale</p>
                 </a>
 
@@ -283,7 +275,7 @@
                 </ul>
             </div>
         </div>
-        <span class="footer-copy">&#169; <span class="main-color">NFS</span> All Right reserved</span>
+        <span class="footer-copy">&#169; <span class="main-color">SFS</span> All Right reserved</span>
     </footer>
     <!-- ################## END FOOTER ############ -->
 
