--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scammer For Sale</title>
-    <link rel="icon" href="imgs/box-solid.png" type="image/x-icon">
+    <link rel="icon" href="imgs/fa-user-secret.svg" type="image/svg+xml">
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -22,29 +22,19 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
-                <i class="fas fa-box nav-logo-icon"></i>
-                <p> Scammer For Sale</p>
+                <i class="fas fa-user-secret nav-logo-icon"></i>
+                <span>Scammer For Sale</span>
             </a>
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-items" id="nav-items">
-                    <li class="item"><a class="nav-link active-link" href="index.html">Home</a></li>
-                    <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="item"><a class="nav-link" href="faq.html">Faq's</a></li>
-                    <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <ul class="nav-items">
+                <li class="item"><a class="nav-link active-link" href="index.html">Home</a></li>
+                <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
+                <li class="item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
             <div class="nav-btns">
-                <div class="login-toggle" id="login-toggle">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="cart-shop" id="cart-shop">
-                    <i class="fas fa-shopping-cart"></i>
-                </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <i id="icon-toggel" class="fas fa-bars"></i>
-                </div>
+                <button class="button login-toggle" id="login-toggle"><i class="fas fa-user"></i></button>
+                <button class="button cart-shop" id="cart-shop"><i class="fas fa-shopping-cart"></i></button>
+                <button class="button nav-toggle" id="nav-toggle"><i id="icon-toggel" class="fas fa-bars"></i></button>
             </div>
         </nav>
     </header>
@@ -169,16 +159,16 @@
                             <div class="home-ind"></div>
                             <div class="home-img-details">
                                 <h4 class="home-details-title">The "Amir"</h4>
-                                <span class="home-details-subtitle">Loyal</span>
+                                <span class="home-details-subtitle">Uber Eats Guy</span>
                             </div>
                         </div>
                         <div class="home-data">
                             <h3 class="home-subtitle">#1 TRENDING ITEM</h3>
-                            <h1 class="home-title">Dark, <br> Hard Working <br> and Loyal!!</h1>
-                            <p class="home-disc">Amir, a loyal slave, devised a ​daring plan to flee the plantation by buying his freedom back, his spirit ​undeterred by the harsh realities of his ​enslavement.</p>
+                            <h1 class="home-title">Built Different, <br> Uber Eats <br> and Scams!!</h1>
+                            <p class="home-disc">Amir is a built, athletic Uber Eats delivery guy who moonlights as a scammer. He uses fake delivery notifications and spoofed apps to collect payments for orders that never existed. His charm and fitness help him gain trust quickly at the doorstep.</p>
                             <div class="home-buttons">
-                                <a href="details.html" class="button">Buy Now!</a>
-                                <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
+                                <a href="details5.html" class="button">Buy Now!</a>
+                                <a href="details5.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
                             </div>
                         </div>
                     </div>
@@ -196,11 +186,11 @@
                         </div>
                         <div class="home-data">
                             <h3 class="home-subtitle">#2 TOP BEST DUO</h3>
-                            <h1 class="home-title">Masculine, <br> Breedable, <br> And Strong</h1>
-                            <p class="home-disc">Ramesh, a skilled blacksmith, forged ​tools of resistance in secret, his heart filled ​with hope for a future where he and his ​fellow slaves would be free.</p>
+                            <h1 class="home-title">Masculine, <br> Survived, <br> And Strong</h1>
+                            <p class="home-disc">Ramesh is a master of phishing scams, sending convincing emails that trick people into revealing their bank details. He crafts fake websites that look identical to real ones, and his technical skills make him a top threat in the world of online fraud.</p>
                             <div class="home-buttons">
-                                <a href="details.html" class="button">Buy Now!</a>
-                                <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
+                                <a href="details2.html" class="button">Buy Now!</a>
+                                <a href="details2.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
                             </div>
                         </div>
                     </div>
@@ -219,10 +209,10 @@
                         <div class="home-data">
                             <h3 class="home-subtitle">#3 TRENDING ITEM</h3>
                             <h1 class="home-title">SALE <span class="main-color"> 20%</span> <br> OFF ON <br> EVRYTHING</h1>
-                            <p class="home-disc">Rakesh, a determined scholar, ​secretly learned to read and write, using ​his newfound knowledge to document the ​injustices he faced and inspire others to ​fight for change.</p>
+                            <p class="home-disc">Rakesh is a social media scammer who creates fake influencer accounts to promote fraudulent giveaways and investment schemes. He manipulates followers with doctored screenshots and testimonials, making his scams go viral before disappearing with the money.</p>
                             <div class="home-buttons">
-                                <a href="details.html" class="button ">Buy Now!</a>
-                                <a href="details.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
+                                <a href="details6.html" class="button ">Buy Now!</a>
+                                <a href="details6.html" class="button-link button-flex">View Details <i class="fas fa-arrow-right button-icon"></i></a>
                             </div>
                         </div>
                     </div>
@@ -240,7 +230,7 @@
             <img class="discount-img" src="imgs/Jacket3.png" alt="discount img">
 
             <div class="discount-data">
-                <h2 class="discount-title">50% Discount <br>On New Products</h2>
+                <h2 class="discount-title" style="color:var(--accent-color); background:var(--primary-color-alt); padding:1rem 2rem; border-radius:10px;">50% Discount <br>On New Products</h2>
                 <a class="button" href="#">Go to New</a>
             </div>
         </div>
@@ -399,7 +389,7 @@
             <!-- FOOTER CONTENT 1 -->
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <i class="fas fa-box footer-logo-icon"></i>
+                    <i class="fas fa-user-secret footer-logo-icon"></i>
                     <p> Scammer For Sale</p>
                 </a>
 
@@ -439,7 +429,7 @@
                 </ul>
             </div>
         </div>
-        <span class="footer-copy">&#169; <span class="main-color">NFS</span> All Right reserved</span>
+        <span class="footer-copy">&#169; <span class="main-color">SFS</span> All Right reserved</span>
     </footer>
     <!-- ################## END FOOTER ############ -->
 
@@ -449,7 +439,6 @@
         <i class="fas fa-arrow-up"></i>
     </a>
     <!-- ################## END SCROLL UP ############ -->
-
 
 
     <!-- ################## START STYLE SWITCHER  ############ -->
