--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scammer For Sale</title>
-    <link rel="icon" href="imgs/box-solid.png" type="image/x-icon">
+    <link rel="icon" href="imgs/fa-user-secret.svg" type="image/svg+xml">
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -21,29 +21,19 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
-                <i class="fas fa-box nav-logo-icon"></i>
-                <p> Scammer For Sale</p>
+                <i class="fas fa-user-secret nav-logo-icon"></i>
+                <span>Scammer For Sale</span>
             </a>
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-items" id="nav-items">
-                    <li class="item"><a class="nav-link " href="index.html">Home</a></li>
-                    <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="item"><a class="nav-link" href="faq.html">Faq's</a></li>
-                    <li class="item"><a class="nav-link active-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <ul class="nav-items">
+                <li class="item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
+                <li class="item"><a class="nav-link active-link" href="contact.html">Contact</a></li>
+                <li class="item"><a class="nav-link" href="about.html">About</a></li>
+            </ul>
             <div class="nav-btns">
-                <div class="login-toggle" id="login-toggle">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="cart-shop" id="cart-shop">
-                    <i class="fas fa-shopping-cart"></i>
-                </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <i id="icon-toggel" class="fas fa-bars"></i>
-                </div>
+                <button class="button login-toggle" id="login-toggle"><i class="fas fa-user"></i></button>
+                <button class="button cart-shop" id="cart-shop"><i class="fas fa-shopping-cart"></i></button>
+                <button class="button nav-toggle" id="nav-toggle"><i id="icon-toggel" class="fas fa-bars"></i></button>
             </div>
         </nav>
     </header>
@@ -176,7 +166,7 @@
                         <i class="fas fa-envelope contact-icon"></i>
                         <div>
                             <h3 class="contact-title">Email</h3>
-                            <span class="contact-subtitle">Scammerforsale@justzeus.com</span>
+                            <span class="contact-subtitle">sfc71064@gmail.com</span>
                         </div>
                     </div>
                     <div class="contact-info">
@@ -224,7 +214,7 @@
             <!-- FOOTER CONTENT 1 -->
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <i class="fas fa-box footer-logo-icon"></i>
+                    <i class="fas fa-user-secret footer-logo-icon"></i>
                     <p> Scammer For Sale</p>
                 </a>
 
@@ -264,7 +254,7 @@
                 </ul>
             </div>
         </div>
-        <span class="footer-copy">&#169; <span class="main-color">NFS</span> All Right reserved</span>
+        <span class="footer-copy">&#169; <span class="main-color">SFS</span> All Right reserved</span>
     </footer>
     <!-- ################## END FOOTER ############ -->
 
