--- a/details5.html
+++ b/details5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scammer For Sale</title>
-    <link rel="icon" href="imgs/box-solid.png" type="image/x-icon">
+    <link rel="icon" href="imgs/fa-user-secret.svg" type="image/svg+xml">
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -21,7 +21,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
-                <i class="fas fa-box nav-logo-icon"></i>
+                <i class="fas fa-user-secret nav-logo-icon"></i>
                 <p> Scammer For Sale</p>
             </a>
             <div class="nav-menu" id="nav-menu">
@@ -29,8 +29,6 @@
                     <li class="item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
                     <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="item"><a class="nav-link" href="faq.html">Faq's</a></li>
                     <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -166,10 +164,10 @@
             <h2 class="bearcrumb-title">Details</h2>
             <h3 class="bearcrumb-subtitle">Home > <span class="main-color">Details</span> </h3>
             <div class="details-container" style="display: flex; align-items: flex-start; gap: 20px;">
-                <div class="product-imgs">
-                    <div class="product-img">
-                        <div class="details-img-tag">New</div>
-                        <img class="details-img" src="imgs/h.png" alt="Jacket" style="width: 120%; height: auto;">
+                <div class="product-imgs" style="display:flex; flex-direction:column; align-items:center; gap:1.5rem;">
+                    <div class="product-img" style="background:var(--primary-color-alt); border-radius:16px; box-shadow:var(--shadow); padding:1.5rem; display:flex; align-items:center; justify-content:center;">
+                        <div class="details-img-tag" style="position:absolute; top:16px; left:16px; background:var(--accent-color); color:#fff; padding:0.3rem 1rem; border-radius:8px; font-size:0.95rem; font-weight:bold;">New</div>
+                        <img class="details-img" src="imgs/h.png" alt="Jacket" style="width:260px; height:auto; border-radius:12px; object-fit:cover; box-shadow:0 4px 24px rgba(0,0,0,0.18);">
                     </div>
                 </div>
                 <div class="product-info">
@@ -184,14 +182,14 @@
                         <span class="reviews-count">40 + Reviews</span>
                     </div>
                     <div class="details-prices">
-                        <span class="details-price">$5541</span>
-                        <span class="details-discount">$6000</span>
-                        <span class="discount-percentage">50% OFF</span>
+                        <span class="details-price" style="color:var(--accent-color); font-weight:bold;">$6294</span>
+                        <span class="details-discount" style="color:#888; text-decoration:line-through;">$6700</span>
+                        <span class="discount-percentage" style="color:var(--accent-color); background:var(--primary-color-alt); padding:0.3rem 0.8rem; border-radius:8px; font-weight:bold;">50% OFF</span>
                     </div>
                     <div class="details-discription">
                         <h3 class="discription-title">Product Details</h3>
                         <div class="discription-details">
-                            <p>Amir, a loyal slave, devised a ​daring plan to flee the plantation by buying his freedom back, his spirit ​undeterred by the harsh realities of his ​enslavement.</p>
+                            <p>Amir is a built, athletic Uber Eats delivery guy who moonlights as a scammer. He uses fake delivery notifications and spoofed apps to collect payments for orders that never existed. His charm and fitness help him gain trust quickly at the doorstep.</p>
                         </div>
                     </div>
                     <div class="cart-amount">
@@ -212,7 +210,7 @@
         </section>
 
         <section class="section related-products">
-            <h2 class="section-title">Related Product</h2>
+            <h2 class="section-title" style="color:var(--accent-color); background:var(--primary-color-alt); padding:1rem 2rem; border-radius:10px;">Related Product</h2>
             <div class="new-container container">
                 <div class="swiper new-swiper">
                     <div class="swiper-wrapper">
@@ -318,7 +316,7 @@
             <!-- FOOTER CONTENT 1 -->
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <i class="fas fa-box footer-logo-icon"></i>
+                    <i class="fas fa-user-secret footer-logo-icon"></i>
                     <p> Scammer For Sale</p>
                 </a>
 
@@ -358,7 +356,7 @@
                 </ul>
             </div>
         </div>
-        <span class="footer-copy">&#169; <span class="main-color">NFS</span> All Right reserved</span>
+        <span class="footer-copy">&#169; <span class="main-color">SFS</span> All Right reserved</span>
     </footer>
     <!-- ################## END FOOTER ############ -->
 
@@ -369,7 +367,7 @@
             <div class="lightbox-close">&times;</div>
             <img class="lightbox-img" src="imgs/town.webp" alt="Shirt">
             <div class="lightbox-caption">
-                <div class="caption-text">Hofny Shop</div>
+                <div class="caption-text">Amir</div>
                 <div class="caption-counter"></div>
             </div>
         </div>
